--- a/data_collection_images.ipynb
+++ b/data_collection_images.ipynb
@@ -19,13 +19,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "def collect_img_experiment_data(experiment_name, label, total_samples=100, sampling_delay=20):\n",
     "    \n",
-    "    IMAGES_PATH = f\"attention_detection/data/exps/{experiment_name}\"\n",
+    "    IMAGES_PATH = f\"attention_detection/exps/{experiment_name}\"\n",
     "\n",
     "    if not os.path.exists(IMAGES_PATH):\n",
     "        os.mkdir(IMAGES_PATH)\n",
@@ -51,23 +51,88 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "collect_img_experiment_data(\"programming\", \"focused\", sampling_delay=25)"
+    "collect_img_experiment_data(\"report-writing\", \"focused\", total_samples=100, sampling_delay=20)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "collect_img_experiment_data(\"research\", \"focused\", total_samples=75, sampling_delay=30)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "collect_img_experiment_data(\"programming\", \"focused\", total_samples=25, sampling_delay=25)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "collect_img_experiment_data(\"planning\", \"focused\", total_samples=10, sampling_delay=20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "collect_img_experiment_data(\"highly-distracted\", \"distracted\", total_samples=105, sampling_delay=3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "collect_img_experiment_data(\"distracted\", \"distracted\", total_samples=80, sampling_delay=5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "collect_img_experiment_data(\n",
+    "    \"semi-distracted\", \"distracted\", total_samples=15, sampling_delay=5\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "cap = cv2.VideoCapture(0)\n",
     "cap.release()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cap.release()"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "iot_opencv_test",
+   "display_name": "IOT",
    "language": "python",
    "name": "python3"
   },
@@ -81,7 +146,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.21"
+   "version": "3.9.20"
   }
  },
  "nbformat": 4,
