Move image data collection to attention detection folder

--- a/attention_detection/data_collection_images.ipynb
+++ b/attention_detection/data_collection_images.ipynb
@@ -19,13 +19,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "def collect_img_experiment_data(experiment_name, label, total_samples=100, sampling_delay=20):\n",
     "    \n",
-    "    IMAGES_PATH = f\"attention_detection/exps/{experiment_name}\"\n",
+    "    IMAGES_PATH = f\"exps/{experiment_name}\"\n",
     "\n",
     "    if not os.path.exists(IMAGES_PATH):\n",
     "        os.mkdir(IMAGES_PATH)\n",
@@ -43,6 +43,14 @@
     "        imgname = os.path.join(IMAGES_PATH, label + \".\" + str(uuid.uuid1()) + \".jpg\")\n",
     "        cv2.imwrite(imgname, frame)\n",
     "        time.sleep(sampling_delay)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Experiments\n",
+    "Cells are cerated to quickly run experiments when desired"
    ]
   },
   {
@@ -112,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
