Further clean-up of model test notebook

--- a/attention_detection/model_test.ipynb
+++ b/attention_detection/model_test.ipynb
@@ -179,7 +179,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# testing run v8 model code\n",
+    "# ATTENTION MODEL V2\n",
+    "attention_model_v2 = YOLO(\"model_iterations/v2/weights/best.pt\")\n",
+    "run_v8_model(attention_model_v2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ATTENTION MODEL V3\n",
+    "attention_model_v3 = YOLO(\"model_iterations/v3/weights/best.pt\")\n",
+    "run_v8_model(attention_model_v3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ATTENTION MODEL V4\n",
     "attention_model_v4 = YOLO(\"model_iterations/v4/weights/best.pt\")\n",
     "run_v8_model(attention_model_v4)"
    ]
