Testing attention-detection-v5

--- a/attention_detection/model_test.ipynb
+++ b/attention_detection/model_test.ipynb
@@ -205,6 +205,17 @@
     "attention_model_v4 = YOLO(\"model_iterations/v4/weights/best.pt\")\n",
     "run_v8_model(attention_model_v4)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ATTENTION MODEL V5\n",
+    "attention_model_v5 = YOLO(\"model_iterations/v5/weights/best.pt\")\n",
+    "run_v8_model(attention_model_v5)"
+   ]
   }
  ],
  "metadata": {
