--- a/attention_detection/data_collection_images.ipynb
+++ b/attention_detection/data_collection_images.ipynb
@@ -59,7 +59,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "collect_img_experiment_data(\"report-writing\", \"focused\", total_samples=100, sampling_delay=20)"
+    "collect_img_experiment_data(\"focused/report-writing\", \"focused\", total_samples=100, sampling_delay=20)"
    ]
   },
   {
@@ -68,7 +68,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "collect_img_experiment_data(\"research\", \"focused\", total_samples=75, sampling_delay=30)"
+    "collect_img_experiment_data(\"focused/research\", \"focused\", total_samples=75, sampling_delay=30)"
    ]
   },
   {
@@ -77,7 +77,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "collect_img_experiment_data(\"programming\", \"focused\", total_samples=25, sampling_delay=25)"
+    "collect_img_experiment_data(\"focused/programming\", \"focused\", total_samples=25, sampling_delay=25)"
    ]
   },
   {
@@ -86,7 +86,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "collect_img_experiment_data(\"planning\", \"focused\", total_samples=10, sampling_delay=20)"
+    "collect_img_experiment_data(\"focused/planning\", \"focused\", total_samples=10, sampling_delay=20)"
    ]
   },
   {
@@ -95,7 +95,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "collect_img_experiment_data(\"highly-distracted\", \"distracted\", total_samples=105, sampling_delay=3)"
+    "collect_img_experiment_data(\"distracted/highly-distracted\", \"distracted\", total_samples=105, sampling_delay=3)"
    ]
   },
   {
@@ -104,7 +104,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "collect_img_experiment_data(\"distracted\", \"distracted\", total_samples=80, sampling_delay=5)"
+    "collect_img_experiment_data(\"distracted/distracted\", \"distracted\", total_samples=80, sampling_delay=5)"
    ]
   },
   {
@@ -114,7 +114,7 @@
    "outputs": [],
    "source": [
     "collect_img_experiment_data(\n",
-    "    \"semi-distracted\", \"distracted\", total_samples=15, sampling_delay=5\n",
+    "    \"distracted/semi-distracted\", \"distracted\", total_samples=15, sampling_delay=5\n",
     ")"
    ]
   },
