--- a/music_integration/bpm/data_collection_bpm.ipynb
+++ b/music_integration/bpm/data_collection_bpm.ipynb
@@ -2,6 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
    "outputs": [],
@@ -32,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,36 +50,46 @@
     "client = deezer.Client()\n",
     "\n",
     "\n",
-    "def get_song_bpm(track,artist):\n",
-    "    result = client.search(track=track, artist=artist)\n",
-    "    if result:\n",
-    "        bpm = result[0].bpm\n",
-    "        if bpm:\n",
-    "            return bpm\n",
+    "def get_song_bpm(track, artist):\n",
+    "    try:\n",
+    "        result = client.search(track=track, artist=artist)\n",
+    "\n",
+    "        if result:\n",
+    "            print(f\"getting bpm for {track} by {artist}\")\n",
+    "            bpm = result[0].bpm\n",
+    "            if bpm:\n",
+    "                return bpm\n",
+    "            else:\n",
+    "                print(\"BPM not found\")\n",
+    "                return None\n",
     "        else:\n",
-    "            print(\"BPM not found\")\n",
+    "            print(\"Song not found\")\n",
     "            return None\n",
-    "    else:\n",
-    "        print(\"Song Not Found\")\n",
-    "        return None"
+    "\n",
+    "    # GPT-4 was used to generate error handling code here:\n",
+    "    except requests.exceptions.HTTPError as http_err:\n",
+    "        if http_err.response.status_code == 403:\n",
+    "            print(\n",
+    "                \"403 Error: Access Forbidden. Please check your API key or authentication.\"\n",
+    "            )\n",
+    "        else:\n",
+    "            print(f\"HTTP error occurred: {http_err}\")  # For other HTTP errors\n",
+    "    except Exception as err:\n",
+    "        print(f\"An error occurred: {err}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "playlist_id = \"5oAd7leEjwjyXVSIZjov7O\"\n",
-    "\n",
-    "\n",
-    "\n",
     "# Client credentials method does not require authorization\n",
     "def playlist_bpm(playlist_id, sp):\n",
     "    playlist = sp.playlist_tracks(playlist_id)\n",
     "    tracks = []\n",
     "    artists = []\n",
-    "    lyricalness = []\n",
+    "    bpm_list = []\n",
     "    for item in playlist[\"items\"]:\n",
     "        artist = item[\"track\"][\"artists\"][0][\"name\"]\n",
     "        track = item[\"track\"][\"name\"]\n",
@@ -78,31 +97,139 @@
     "        tracks.append(item[\"track\"][\"name\"])\n",
     "        artists.append(item[\"track\"][\"artists\"][0][\"name\"])\n",
     "\n",
-    "        bpm = get_song_bpm()\n",
+    "        bpm = get_song_bpm(track, artist)\n",
     "\n",
-    "        if lyricalness_metric:\n",
-    "            lyricalness.append(lyricalness_metric)\n",
-    "        else:\n",
-    "            # make assumption lyricalness is average\n",
-    "            lyricalness.append(200)\n",
+    "        bpm_list.append(bpm)\n",
+    "        \n",
     "\n",
-    "    return tracks, artists, lyricalness"
+    "    data = {\n",
+    "        \"tracks\": tracks,\n",
+    "        \"artists\": artists,\n",
+    "        \"bpm\": bpm_list\n",
+    "    }\n",
+    "\n",
+    "    df = pd.DataFrame.from_dict(data)\n",
+    "\n",
+    "    return df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "getting bpm for Superfly by Curtis Mayfield\n",
+      "getting bpm for One Nation Under a Groove by Funkadelic\n",
+      "getting bpm for Flash Light by Parliament\n",
+      "BPM not found\n",
+      "getting bpm for Higher Ground by Stevie Wonder\n",
+      "getting bpm for Dancing in the Moonlight by King Harvest\n",
+      "getting bpm for Papa Was A Rollin' Stone - Single Version by The Temptations\n",
+      "getting bpm for Super Freak by Rick James\n",
+      "getting bpm for Play That Funky Music by Wild Cherry\n",
+      "getting bpm for Linus And Lucy by Vince Guaraldi Trio\n",
+      "getting bpm for Birdland by Weather Report\n",
+      "getting bpm for Mood Indigo by Nina Simone\n",
+      "BPM not found\n",
+      "getting bpm for Mood Indigo by Frank Sinatra\n",
+      "getting bpm for Strange Fruit by Billie Holiday\n",
+      "getting bpm for 'Round Midnight by Thelonious Monk\n",
+      "BPM not found\n",
+      "getting bpm for Take the \"A\" Train by Duke Ellington\n",
+      "getting bpm for Take Five by The Dave Brubeck Quartet\n",
+      "getting bpm for The Girl From Ipanema by Stan Getz\n",
+      "getting bpm for Fly Me To The Moon by Frank Sinatra\n",
+      "getting bpm for Summertime by The Sundays\n",
+      "getting bpm for What A Wonderful World by Louis Armstrong\n",
+      "getting bpm for Girls Just Want to Have Fun by Cyndi Lauper\n",
+      "getting bpm for Bad Romance by Lady Gaga\n",
+      "getting bpm for Poker Face by Lady Gaga\n",
+      "getting bpm for Uptown Funk by Mark Ronson\n",
+      "getting bpm for Gangsta's Paradise by Coolio\n",
+      "getting bpm for SLOW DANCING IN THE DARK by Joji\n",
+      "BPM not found\n",
+      "getting bpm for Billie Jean by Michael Jackson\n",
+      "getting bpm for Radio Ga Ga - Remastered 2011 by Queen\n",
+      "getting bpm for Somebody To Love by Queen\n",
+      "getting bpm for Here Comes The Sun - Remastered 2009 by The Beatles\n",
+      "getting bpm for A Day In The Life - Remastered 2009 by The Beatles\n",
+      "getting bpm for A Day In The Life by The Beatles\n",
+      "getting bpm for Let It Be - Remastered 2009 by The Beatles\n",
+      "getting bpm for Let It Be - Remastered 2015 by The Beatles\n",
+      "getting bpm for Come Together - Remastered 2009 by The Beatles\n",
+      "getting bpm for Hey Jude by The Beatles\n",
+      "getting bpm for Rock the Casbah - Remastered by The Clash\n",
+      "getting bpm for Reptilia by The Strokes\n",
+      "getting bpm for Pusherman by Curtis Mayfield\n",
+      "getting bpm for Strawberry Letter 23 by The Brothers Johnson\n",
+      "getting bpm for Bennie And The Jets - Remastered 2014 by Elton John\n",
+      "getting bpm for Under Pressure - Remastered 2011 by Queen\n",
+      "getting bpm for Starman - 2012 Remaster by David Bowie\n",
+      "getting bpm for Rocket Man (I Think It's Going To Be A Long, Long Time) by Elton John\n",
+      "getting bpm for She's Not There by The Zombies\n",
+      "getting bpm for What's Going On by Marvin Gaye\n",
+      "BPM not found\n",
+      "getting bpm for Alejandro by Lady Gaga\n",
+      "getting bpm for Just Kissed My Baby by The Meters\n",
+      "getting bpm for Word Up by Cameo\n",
+      "BPM not found\n",
+      "getting bpm for Fire on the Bayou by The Meters\n",
+      "getting bpm for California Soul by Marlena Shaw\n",
+      "getting bpm for Inspiration Information by Shuggie Otis\n",
+      "getting bpm for As by Stevie Wonder\n",
+      "BPM not found\n",
+      "getting bpm for Spooky by Dusty Springfield\n",
+      "getting bpm for Somethin' Stupid by Frank Sinatra\n",
+      "getting bpm for Sir Duke by Stevie Wonder\n",
+      "getting bpm for Everyday People by Sly & The Family Stone\n",
+      "getting bpm for Give Up The Funk (Tear The Roof Off The Sucker) by Parliament\n",
+      "getting bpm for Green Onions by Booker T. & the M.G.'s\n",
+      "getting bpm for Land of 1000 Dances by Wilson Pickett\n",
+      "getting bpm for Fight The Power by Public Enemy\n",
+      "getting bpm for The Message by Grandmaster Flash\n",
+      "getting bpm for California Love by 2Pac\n",
+      "getting bpm for Shook Ones, Pt. II by Mobb Deep\n",
+      "An error occurred: (403, URL('https://api.deezer.com/search?q=artist%3A%22A+Tribe+Called+Quest%22+track%3A%22Can+I+Kick+It%3F%22&limit=1'), 'HTTP_FORBIDDEN')\n",
+      "getting bpm for Hypnotize - 2007 Remaster by The Notorious B.I.G.\n",
+      "getting bpm for Not Like Us by Kendrick Lamar\n",
+      "BPM not found\n",
+      "getting bpm for Mass Appeal by Gang Starr\n",
+      "getting bpm for 50 Ways to Leave Your Lover by Paul Simon\n",
+      "getting bpm for A Horse with No Name by America\n",
+      "getting bpm for Kiss by Prince\n",
+      "getting bpm for Let's Dance - 2018 Remaster by David Bowie\n",
+      "getting bpm for Big Poppa - 2005 Remaster by The Notorious B.I.G.\n",
+      "getting bpm for Do For Love by 2Pac\n",
+      "BPM not found\n",
+      "getting bpm for Gangsta's Paradise by Coolio\n",
+      "getting bpm for Without Me by Eminem\n",
+      "getting bpm for Insane in the Brain by Cypress Hill\n",
+      "getting bpm for Jump Around by House Of Pain\n",
+      "getting bpm for Fight For Your Right by Beastie Boys\n",
+      "getting bpm for Intergalactic - Remastered 2009 by Beastie Boys\n",
+      "BPM not found\n",
+      "getting bpm for Waterfalls by TLC\n",
+      "getting bpm for Kill Bill by SZA\n",
+      "BPM not found\n"
+     ]
+    }
+   ],
+   "source": [
+    "playlist_id = \"5oAd7leEjwjyXVSIZjov7O\" #ID for IOT test playlist\n",
+    "df = playlist_bpm(playlist_id, sp)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "get_song_bpm(\"Steve Lacy\", \"Bad Habit\")"
+    "df.to_csv(\"bpm_dataset.csv\")"
    ]
   }
  ],
