Clean up a few details

--- a/time_series_data/time_series_analysis.ipynb
+++ b/time_series_data/time_series_analysis.ipynb
@@ -179,26 +179,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x_train, x_test, y_train, y_test = train_test_split(X,y, test_size=0.3, random_state=0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "clf=sk.RandomForestClassifier(n_estimators=100)\n",
-    "clf=clf.fit(x_train,y_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y_pred=clf.predict(x_test)"
+    "x_train, x_test, y_train, y_test = train_test_split(X,y, test_size=0.3, random_state=0)\n",
+    "clf = sk.RandomForestClassifier(n_estimators=100)\n",
+    "clf = clf.fit(x_train, y_train)\n",
+    "y_pred = clf.predict(x_test)"
    ]
   },
   {
@@ -409,6 +393,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Create Plots"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 31,
    "metadata": {},
@@ -436,127 +427,6 @@
     "attention = test_df[\"attention-class\"].replace({\"DISTRACTED\": 0, \"FOCUSED\": 1})\n",
     "\n",
     "test_df[\"attention-class\"] = attention"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
-       "      <th>attention-class</th>\n",
-       "      <th>class-score</th>\n",
-       "      <th>track-title</th>\n",
-       "      <th>artist</th>\n",
-       "      <th>text-reading</th>\n",
-       "      <th>bpm</th>\n",
-       "      <th>lyric-count</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.866439</td>\n",
-       "      <td>Love is Heartbreak</td>\n",
-       "      <td>Cousin Tony's Brand New Firebird</td>\n",
-       "      <td>0.543307</td>\n",
-       "      <td>0.672646</td>\n",
-       "      <td>0.214458</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.876667</td>\n",
-       "      <td>Love is Heartbreak</td>\n",
-       "      <td>Cousin Tony's Brand New Firebird</td>\n",
-       "      <td>0.457818</td>\n",
-       "      <td>0.672646</td>\n",
-       "      <td>0.214458</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.975039</td>\n",
-       "      <td>Love is Heartbreak</td>\n",
-       "      <td>Cousin Tony's Brand New Firebird</td>\n",
-       "      <td>0.120360</td>\n",
-       "      <td>0.672646</td>\n",
-       "      <td>0.214458</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.961814</td>\n",
-       "      <td>Love is Heartbreak</td>\n",
-       "      <td>Cousin Tony's Brand New Firebird</td>\n",
-       "      <td>0.220472</td>\n",
-       "      <td>0.672646</td>\n",
-       "      <td>0.214458</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>4</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.962477</td>\n",
-       "      <td>Love is Heartbreak</td>\n",
-       "      <td>Cousin Tony's Brand New Firebird</td>\n",
-       "      <td>0.219348</td>\n",
-       "      <td>0.672646</td>\n",
-       "      <td>0.214458</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   Unnamed: 0  attention-class  class-score         track-title  \\\n",
-       "0           0                0     0.866439  Love is Heartbreak   \n",
-       "1           1                0     0.876667  Love is Heartbreak   \n",
-       "2           2                1     0.975039  Love is Heartbreak   \n",
-       "3           3                1     0.961814  Love is Heartbreak   \n",
-       "4           4                1     0.962477  Love is Heartbreak   \n",
-       "\n",
-       "                             artist  text-reading       bpm  lyric-count  \n",
-       "0  Cousin Tony's Brand New Firebird      0.543307  0.672646     0.214458  \n",
-       "1  Cousin Tony's Brand New Firebird      0.457818  0.672646     0.214458  \n",
-       "2  Cousin Tony's Brand New Firebird      0.120360  0.672646     0.214458  \n",
-       "3  Cousin Tony's Brand New Firebird      0.220472  0.672646     0.214458  \n",
-       "4  Cousin Tony's Brand New Firebird      0.219348  0.672646     0.214458  "
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "test_df.head()"
    ]
   },
   {
