--- a/time_series_data/lyricalness_analysis.ipynb
+++ b/time_series_data/lyricalness_analysis.ipynb
@@ -86,25 +86,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Var =  22012.83116883117\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'arr' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[38], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mstatistics\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mVar = \u001b[39m\u001b[38;5;124m\"\u001b[39m, (statistics\u001b[38;5;241m.\u001b[39mvariance(lyrics_without_na)))\n\u001b[0;32m----> 3\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mStd = \u001b[39m\u001b[38;5;124m\"\u001b[39m, (statistics\u001b[38;5;241m.\u001b[39mstdev(\u001b[43marr\u001b[49m)))\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'arr' is not defined"
+      "Var =  22012.83116883117\n",
+      "Std =  148.36721729826698\n"
      ]
     }
    ],
